fixed website spacing
it took me HOURS........ to finally fix the slide to slide scrolling again.
i dont know why it messed up when i only did the api, however before anything else i am commiting this NOWW!

--- a/frontend/sass/pages/_home.scss
+++ b/frontend/sass/pages/_home.scss
@@ -2,7 +2,7 @@ section{
     scroll-snap-align: start;
     height: fit-content;
     padding: 0 15px;
-    width: 100vw;
+    position: sticky;
 }
 
 #top{
